--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "homepage": "https://github.com/gsong/express-react-project-starter#readme",
   "dependencies": {
+    "3d-react-carousal": "^4.0.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2"
   },
