--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
   "homepage": "https://github.com/gsong/express-react-project-starter#readme",
   "dependencies": {
     "3d-react-carousal": "^4.0.2",
+    "lite": "^4.0.5",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "twitter": "^1.7.1",
+    "twitter-lite": "^1.1.0"
   },
   "devDependencies": {
     "all-contributors-cli": "^6.20.0"
