--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
   },
   "proxy": "http://localhost:4000",
   "dependencies": {
+    "3d-react-carousal": "^4.0.2",
     "history": "^5.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
