--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
   "homepage": "https://github.com/gsong/express-react-project-starter#readme",
   "dependencies": {
     "3d-react-carousal": "^4.0.2",
+    "es6-promise": "^4.2.8",
+    "isomorphic-fetch": "^3.0.0",
     "lite": "^4.0.5",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
@@ -47,6 +49,7 @@
     "twitter-lite": "^1.1.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^12.1.2",
     "all-contributors-cli": "^6.20.0"
   }
 }
