--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "3d-react-carousal": "^4.0.2",
     "history": "^5.0.1",
+    "isomorphic-fetch": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.0.0-beta.7",
