--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "isomorphic-fetch": "^3.0.0",
     "mime-types": "^2.1.30",
     "pg-promise": "^10.9.5"
   },
