--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "db:start": "docker-compose up -d",
     "db:stop": "docker-compose down",
     "eslint": "(cd app && npm run eslint); (cd server && npm run eslint)",
-    "dev": "react-scripts start",
-    "start": "serve -s build",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
-    "heroku-postbuild": "npm run build",
+    "heroku:app:create": "bin/heroku-app-create.sh",
+    "heroku:dashboard": "open https://dashboard.heroku.com/apps/$(heroku apps | sed -n '2 p')",
+    "heroku:db:init": "run-s _heroku:db:reset _heroku:db:init",
+    "heroku:deploy": "bin/heroku-deploy.sh",
+    "heroku:psql": "docker-compose run --rm -e DATABASE_URL=$(heroku config:get DATABASE_URL) db ash -c 'psql ${DATABASE_URL}'",
+    "heroku:setup": "bin/heroku-setup.sh",
+    "postinstall": "(cd app && npm install); (cd server && npm install)",
     "prettier": "prettier --write .",
     "psql": "docker-compose exec -u postgres db ash -c 'psql ${POSTGRES_DB}'",
     "server:start": "cd server && npm start",
