--- a/app/package.json
+++ b/app/package.json
@@ -41,10 +41,6 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.0.2",
-    "eslint-config-prettier": "^8.2.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "node-sass": "^6.0.1",
-    "prettier": "^2.2.1"
+    "@testing-library/user-event": "^13.0.2"
   }
 }
