--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "heroku:psql": "docker-compose run --rm -e DATABASE_URL=$(heroku config:get DATABASE_URL) db ash -c 'psql ${DATABASE_URL}'",
     "heroku:setup": "bin/heroku-setup.sh",
     "postinstall": "(cd app && npm install); (cd server && npm install)",
-    "prettier": "prettier --write .",
     "psql": "docker-compose exec -u postgres db ash -c 'psql ${POSTGRES_DB}'",
     "server:start": "cd server && npm start",
     "start": "run-p db:start server:start app:start",
@@ -39,14 +38,11 @@
   },
   "homepage": "https://github.com/gsong/express-react-project-starter#readme",
   "dependencies": {
-    "3d-react-carousal": "^4.0.2",
     "es6-promise": "^4.2.8",
-    "isomorphic-fetch": "^3.0.0",
     "lite": "^4.0.5",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2",
-    "twitter": "^1.7.1",
-    "twitter-lite": "^1.1.0"
+    "react-router-dom": "^6.11.1",
+    "rimraf": "^3.0.2"
   },
   "devDependencies": {
     "@testing-library/react": "^12.1.2",
